--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,6 @@
 @import"./abstracts/variables";
+@import"./abstracts/mixins";
 @import"./layouts/container";
 @import"./layouts/header";
 @import"./layouts/searchBadgeDrop";
+@import"./layouts/thumdCard";
