--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 $cd-color-primary: #E7E7E7;
 $cd-color-secondary: #C7BEBE;
 $cd-color-ingredient: #3282F7;
-$cd-color-device: #68D9A4;
-$cd-color-utensil: #ED6454;
+$cd-color-appliance: #68D9A4;
+$cd-color-ustensil: #ED6454;
 $cd-color-accent: #FFFFFF;
 $cd-color-default: #000000;
