--- a/css/style.css
+++ b/css/style.css
@@ -168,15 +168,9 @@
 .ingredientDropdown {
   width: auto;
   height: 55px;
-  margin-right: 30px;
   display: flex;
   align-items: center;
   position: relative;
-}
-.ingredientDropdown > a {
-  height: 100%;
-  width: 100%;
-  text-decoration: none;
 }
 .ingredientDropdown__openBtn {
   padding-left: 15px;
@@ -195,6 +189,7 @@
   border: none;
   cursor: pointer;
   background-color: #3282F7;
+  visibility: visible;
 }
 .ingredientDropdown__openBtn:hover {
   background: #085bd4;
@@ -206,7 +201,7 @@
   padding-left: 15px;
   padding-right: 15px;
   height: 100%;
-  width: 150px;
+  width: auto;
   border-radius: 5px;
   flex-direction: row;
   justify-content: space-between;
@@ -223,14 +218,8 @@
 .applianceDropdown {
   width: auto;
   height: 55px;
-  margin-right: 30px;
   display: flex;
   align-items: center;
-}
-.applianceDropdown > a {
-  height: 100%;
-  width: 100%;
-  text-decoration: none;
 }
 .applianceDropdown__openBtn {
   padding-left: 15px;
@@ -250,6 +239,7 @@
   cursor: pointer;
   position: relative;
   background-color: #68D9A4;
+  margin-left: 30px;
 }
 .applianceDropdown__openBtn:hover {
   background: #31c37f;
@@ -264,14 +254,8 @@
 .ustensilDropdown {
   width: auto;
   height: 55px;
-  margin-right: 30px;
   display: flex;
   align-items: center;
-}
-.ustensilDropdown > a {
-  height: 100%;
-  width: 100%;
-  text-decoration: none;
 }
 .ustensilDropdown__openBtn {
   padding-left: 15px;
@@ -291,6 +275,7 @@
   cursor: pointer;
   position: relative;
   background-color: #ED6454;
+  margin-left: 30px;
 }
 .ustensilDropdown__openBtn:hover {
   background: #dd2c17;
