--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,3 +1,4 @@
+//Paramètres des tags
 @mixin badge-parameter {
     width: auto;
     height: 35px;
@@ -12,15 +13,14 @@
 
 @mixin dropdown-CommonParameters {
     width: auto;
-    height: 55px;
-    display: flex;
-    align-items: center;
+    height: auto;
 }
 
+//Paramètres des boutons d'ouverture de la liste des recettes
 @mixin dropdownBtn-CommonParameters {
     padding-left: 15px;
     padding-right: 15px;
-    height: 100%;
+    height: 55px;
     width: 150px;
     border-radius: 5px;
     display: flex;
@@ -32,5 +32,74 @@
     font-style: normal;
     color: $cd-color-accent;
     border: none;
+    cursor: pointer;
+}
+
+//Paramètres du panel de la liste des recettes
+@mixin dropdownHidden-CommonParameters {
+    height: 55px;
+    width: 500px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 15px;
+    font-family: 'Lato', sans-serif;
+    font-style: normal;
+    color: $cd-color-accent;
+    border: none;
+}
+
+//Paramètres des éléments de la liste des recettes
+@mixin recipesElementsListCommonParameter {
+    display: inline-flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    font-size: 18px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+//Paramètres des éléments des "Div" de la liste des recettes
+@mixin recipesElementsList-Div {
+    width: 160px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-top: 2.5px;
+    padding-bottom: 2.5px;
+    padding-left: 15px;
+    padding-right: 40px;
+    line-height: 30px;
+}
+
+//Paramètres "Input" de la liste des recettes
+@mixin recipesElementsList-Input {
+    width: 455px;
+    height: 100%;
+    font-size: 16px;
+    border: none;
+    padding-left: 25px;
+    border-top-left-radius: 5px;
+
+    &:focus {
+        outline: none !important;
+        color: $cd-color-accent;
+    }
+}
+
+//Paramètres du chevron de fermeture de la liste des recettes
+@mixin recipesElementsList-closeChevron {
+    width: 40px;
+    height: 100%;
+    padding-top: 20px;
+    padding-left: 10px;
+    border-top-right-radius: 5px;
     cursor: pointer;
 }
