--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,16 +1,18 @@
 //Paramètres des tags
 @mixin badge-parameter {
-    width: auto;
+    width: 122.75px;
     height: 35px;
-    margin-right: 20px;
-    padding-right: 10px;
+    margin: 10px;
+    margin-right: 15px;
+    margin-left: 0px;
+    padding-right: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: $cd-color-accent;
 }
 
-
+// Drop down
 @mixin dropdown-CommonParameters {
     width: auto;
     height: auto;
@@ -57,6 +59,7 @@
     display: inline-flex;
     flex-direction: column;
     flex-wrap: wrap;
+    width: 500px;
     padding-top: 30px;
     padding-left: 10px;
     padding-right: 10px;
@@ -64,6 +67,7 @@
     font-size: 18px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    cursor: pointer;
 }
 
 //Paramètres des éléments des "Div" de la liste des recettes
