--- a/sass/layouts/_searchBadgeDrop.scss
+++ b/sass/layouts/_searchBadgeDrop.scss
@@ -51,58 +51,88 @@
 //Badges
 .badgeBox {
     width: 100%;
-    height: 50px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    height: auto;
     margin-bottom: 20px;
 }
 
-.ingredientBadge {
-    @include badge-parameter;
-    border: 1px solid $cd-color-ingredient;
-    background-color: $cd-color-ingredient;
-    border-radius: 5px;
-    &__designation {
-        padding-left: 10px;
-        padding-right: 10px;
-        font-size: 14px;
-    }
-    &__closeBtn:hover {
-        cursor: pointer;
-        color: darken($color: $cd-color-ingredient, $amount: 20);
-    }
-}
-
-.applianceBadge {
-    @include badge-parameter;
-    border: 1px solid $cd-color-appliance;
-    background-color: $cd-color-appliance;
-    border-radius: 5px;
-    &__designation {
-        padding-left: 10px;
-        padding-right: 10px;
-        font-size: 14px;
-    }
-    &__closeBtn:hover {
-        cursor: pointer;
-        color: darken($color: $cd-color-appliance, $amount: 20);
+.Badge {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    &__tagIngredient {
+        @include badge-parameter;
+        border: 1px solid $cd-color-ingredient;
+        background-color: $cd-color-ingredient;
+        border-radius: 5px;
+        &--name {
+            padding-left: 10px;
+            padding-right: 10px;
+            font-size: 14px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        &--closeCross:hover {
+            cursor: pointer;
+            color: darken($color: $cd-color-ingredient, $amount: 20);
+        }
     }
 }
 
-.ustensilBadge {
-    @include badge-parameter;
-    border: 1px solid $cd-color-ustensil;
-    background-color: $cd-color-ustensil;
-    border-radius: 5px;
-    &__designation {
-        padding-left: 10px;
-        padding-right: 10px;
-        font-size: 14px;
+.Badge {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    &__tagAppliance {
+        @include badge-parameter;
+        border: 1px solid $cd-color-appliance;
+        background-color: $cd-color-appliance;
+        border-radius: 5px;
+        &--name {
+            padding-left: 10px;
+            padding-right: 10px;
+            font-size: 14px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        &--closeCross:hover {
+            cursor: pointer;
+            color: darken($color: $cd-color-appliance, $amount: 20);
+        }
     }
-    &__closeBtn:hover {
-        cursor: pointer;
-        color: darken($color: $cd-color-ustensil, $amount: 20);
+}
+
+.Badge {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    &__tagUstensil {
+        @include badge-parameter;
+        border: 1px solid $cd-color-ustensil;
+        background-color: $cd-color-ustensil;
+        border-radius: 5px;
+        &--name {
+            padding-left: 10px;
+            padding-right: 10px;
+            font-size: 14px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        &--closeCross:hover {
+            cursor: pointer;
+            color: darken($color: $cd-color-ustensil, $amount: 20);
+        }
     }
 }
 
@@ -152,15 +182,13 @@
         position: absolute;
         &--allIngredients {
             @include recipesElementsListCommonParameter;
-            width: 500px;
             height: 1450px;
             background-color: $cd-color-ingredient;
-
-            & > div {
+            & > .recipesOneElement-Div {
                 @include recipesElementsList-Div;
             }
 
-            & > div:hover {
+            & > .recipesOneElement-Div:hover {
                 color: $cd-color-ingredient;
                 background-color: $cd-color-accent;
 
@@ -206,15 +234,14 @@
         margin-left: 30px;
         &--allAppliances {
             @include recipesElementsListCommonParameter;
-            width: 500px;
             height: 190px;
             background-color: $cd-color-appliance;
 
-            & > div {
+            & > .recipesOneElement-Div {
                 @include recipesElementsList-Div;
             }
 
-            & > div:hover {
+            & > .recipesOneElement-Div:hover {
                 color: $cd-color-appliance;
                 background-color: $cd-color-accent;
 
@@ -259,15 +286,14 @@
         margin-left: 30px;
         &--allUstensils {
             @include recipesElementsListCommonParameter;
-            width: 500px;
             height: 365px;
             background-color: $cd-color-ustensil;
 
-            & > div {
+            & > .recipesOneElement-Div {
                 @include recipesElementsList-Div;
             }
 
-            & > div:hover {
+            & > .recipesOneElement-Div:hover {
                 color: $cd-color-ustensil;
                 background-color: $cd-color-accent;
 
