--- a/sass/layouts/_thumdCard.scss
+++ b/sass/layouts/_thumdCard.scss
@@ -1,7 +1,7 @@
 //Thumb Cards
 .thumbCard-section {
     width: 100%;
-    height: auto;
+    height: 500px;
     
     display: flex;
     flex-direction: row;
@@ -59,4 +59,5 @@
     height: 100%;
     font-size: 12px;
     margin-left: 5px;
+    overflow-y: auto;
 }
